- added zoom-icons - unified the style of the plot-settings/channel-selection panels to use a toolbar --> now the spectroscopy plot is similar to the scan-image plot

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -1692,6 +1692,15 @@
     <Content Include="LowPrivilegeSetup.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\zoom.png" />
+    <None Include="Resources\zoom_16.png" />
+    <None Include="Resources\zoom_25.png" />
+    <None Include="Resources\zoom_in.png" />
+    <None Include="Resources\zoom_in_16.png" />
+    <None Include="Resources\zoom_in_25.png" />
+    <None Include="Resources\zoom_out.png" />
+    <None Include="Resources\zoom_out_16.png" />
+    <None Include="Resources\zoom_out_25.png" />
     <Content Include="versioninfo_dev_lowpriv.xml">
       <SubType>Designer</SubType>
     </Content>
