[new] re-gauge tool for lock-in data which restores the physical dimensions by the given lock-in settings

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -570,18 +570,19 @@
     <Compile Include="SpectroscopyTable\cSpectroscopyTableColumnRenamer.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataAverager.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataReverter.vb" />
-    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRegaugeByGivenParameters.vb" />
-    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRenormalizer.vb" />
+    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRegaugeByFitParameters.vb" />
+    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRegaugeByNumericDerivative.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataSmoother.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataSummer.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataMultiplier.vb" />
-    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRenormalizerByParameter.vb" />
+    <Compile Include="SpectroscopyTable\cSpectroscopyTableDataRegaugeByLockinParameter.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableDataSummerTwoSets.vb" />
     <Compile Include="SpectroscopyTable\cSpectroscopyTableFetcherMultiple.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_ColumnRenaming.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataAverageMultipleFiles.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataAverageSingleFile.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataNonLinearFittingWithLastSettings.vb" />
+    <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataRegaugerByLockinParameters.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataRegaugerByParameters.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataReversion.vb" />
     <Compile Include="WindowModules\DataBrowser\FileObjectActions\cDataBrowserFileObjectAction_DataSummationFactor.vb" />
