* [bugfix] On browsing through a list of scan image files the selected channel was jumping back to the first channel * [compatibility] Nanotec STM and AFM files
* changed the import routine, so that they can combine several data files to a single spectroscopy table
* changes to the Omicron Matrix import routine

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -499,6 +499,9 @@
     <Compile Include="ImportMethods\cFileObject.vb" />
     <Compile Include="ImportMethods\iFileImport_ScanImage.vb" />
     <Compile Include="ImportMethods\iFileImport_SpectroscopyTable.vb" />
+    <Compile Include="ImportMethods\Nanotec\cFileImportNanotec.vb" />
+    <Compile Include="ImportMethods\Nanotec\cFileImportNanotecCUR.vb" />
+    <Compile Include="ImportMethods\Nanotec\cFileImportNanotecImages.vb" />
     <Compile Include="ImportMethods\rFileImport.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -2015,6 +2018,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fitting\FitProcedures\old\" />
+    <Folder Include="ImportMethods\Omicron-Matrix\" />
     <Folder Include="Windows\OldWindows_not_included\" />
     <Folder Include="Windows\Spectroscopy Data Treatment\Inversion\" />
   </ItemGroup>
