Omicron import works! - included a cache for the parameterfile - fixed the positioning of the spectra - fixed some small details

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -497,6 +497,7 @@
     <Compile Include="HelperClasses\cStringCollectionHistory.vb" />
     <Compile Include="HelperClasses\ReadOnlyDictionary.vb" />
     <Compile Include="ImportMethods\cFileObject.vb" />
+    <Compile Include="ImportMethods\iFileImport_ParameterFileToBeImportedOnce.vb" />
     <Compile Include="ImportMethods\iFileImport_ScanImage.vb" />
     <Compile Include="ImportMethods\iFileImport_SpectroscopyTable.vb" />
     <Compile Include="ImportMethods\Nanotec\cFileImportNanotec.vb" />
