--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/packages.config
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="CUDAfy.NET" version="1.29.5576.13786" targetFramework="net45" />
   <package id="DotNetZip.Reduced" version="1.9.1.8" targetFramework="net4" />
-  <package id="MathNet.Numerics" version="3.11.0" targetFramework="net45" />
-  <package id="MathNet.Numerics.Data.Matlab" version="3.1.1" targetFramework="net45" />
-  <package id="MathNet.Numerics.Data.Text" version="3.1.1" targetFramework="net45" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.0.1.0" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="3.11.1" targetFramework="net45" />
+  <package id="MathNet.Numerics.Data.Matlab" version="3.2.0" targetFramework="net45" />
+  <package id="MathNet.Numerics.Data.Text" version="3.2.0" targetFramework="net45" />
   <package id="NetSparkle" version="1.1.0" targetFramework="net4" />
   <package id="SmartThreadPool.dll" version="2.2.3" targetFramework="net4" />
   <package id="zlib.net" version="1.0.4.0" targetFramework="net4" />
