[bugfix] the last used filter is now stored correctly [bugfix] Nanonis import failed, if files were recorded with the high speed gain [bugfix] Createc columns were named hard coded with dI/dV for ADC3 channels [new-alpha] NanoObserver images are can be loaded [new] gitignore file for visual studio

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -547,6 +547,7 @@
     <Compile Include="ImportMethods\iFileImport_ScanImage.vb" />
     <Compile Include="ImportMethods\iFileImport_SpectroscopyTable.vb" />
     <Compile Include="ImportMethods\Nanonis\cFileImportNanonisGrid.vb" />
+    <Compile Include="ImportMethods\NanoObserver\cFileImportNanoObserverNAO.vb" />
     <Compile Include="ImportMethods\Nanotec\cFileImportNanotec.vb" />
     <Compile Include="ImportMethods\Nanotec\cFileImportNanotecCUR.vb" />
     <Compile Include="ImportMethods\Nanotec\cFileImportNanotecImages.vb" />
