the scan image viewer can now display an arbitrary property embed in the image

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Settings.settings
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Settings.settings
@@ -598,5 +598,11 @@
     <Setting Name="LastFFT_ColumnTargetName" Type="System.String" Scope="User">
       <Value Profile="(Default)">FFT result</Value>
     </Setting>
+    <Setting Name="ScanImageViewer_LastSelectedParameterDisplay" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ScanImageViewer_ParameterDisplayEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
