--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/SpectroscopyManager.vbproj
@@ -2205,8 +2205,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(DevEnvDir)..\Tools\vsvars32.bat"
-"C:\Program Files (x86)\Microsoft SDKs\Windows\v7.0A\bin\signtool.exe" sign /sha1 0B190EE1FF7510AAD9B3FC81B89CCEAD4EFA1283 /t http://timestamp.verisign.com/scripts/timstamp.dll /v "$(ProjectDir)obj\x86\$(ConfigurationName)\$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
